# mail_client

./: .gitignore  CMakeLists.txt  MailView.pro  README.md  account.cpp  account.h  autorisationrequest.cpp  autorisationrequest.h  autorisationrequest.ui  build.bat  decoder.cpp  decoder.h  directory.cpp  directory.h  go.mod  internetconnection.cpp  internetconnection.h  listview.cpp  listview.h  main.cpp  main.go  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  messagesend.cpp  messagesend.h  messagesend.ui  messageview.cpp  messageview.h  messageview.ui  mime_message.cpp  mime_message.h  mimemessage.cpp  mimemessage.h  parser.cpp  parser.h  treelistview.h
